--- a/dcommons-service/dcommons-service-rom-jpa/pom.xml
+++ b/dcommons-service/dcommons-service-rom-jpa/pom.xml
@@ -5,12 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.dingwd</groupId>
-        <artifactId>dcommons-rom</artifactId>
+        <artifactId>dcommons-service</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
     <groupId>com.dingwd.dcommons.service</groupId>
-    <artifactId>dcommons-service</artifactId>
+    <artifactId>dcommons-service-rom-jpa</artifactId>
 
     <dependencies>
         <dependency>
