--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <packaging>pom</packaging>
 
     <modules>
-        <module>dcommons-rom</module>
+        <module>dcommons-service</module>
     </modules>
 
     <properties>
