--- a/dcommons-service/dcommons-service-rom-api/pom.xml
+++ b/dcommons-service/dcommons-service-rom-api/pom.xml
@@ -19,6 +19,16 @@
             <artifactId>spring-data-commons</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.persistence</groupId>
+            <artifactId>jakarta.persistence-api</artifactId>
+            <version>${jakarta.persistence-api}</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project>
