--- a/dcommons-service/dcommons-service-rom-jpa/pom.xml
+++ b/dcommons-service/dcommons-service-rom-jpa/pom.xml
@@ -16,8 +16,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-jpa</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -36,7 +36,8 @@
         <dependency>
             <groupId>jakarta.inject</groupId>
             <artifactId>jakarta.inject-api</artifactId>
-            <version>${inject.version}</version>
+            <version>${jakarta.inject.version}</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
