--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,9 @@
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <inject.version>2.0.1</inject.version>
-        <jakarta.annotation>2.1.1</jakarta.annotation>
-        <jakartaee-api.version>10.0.0</jakartaee-api.version>
+        <jakarta.inject.version>2.0.1</jakarta.inject.version>
+        <jakarta.annotation>3.0.0-M1</jakarta.annotation>
+        <jakarta.persistence-api>3.2.0-M1</jakarta.persistence-api>
     </properties>
 
     <dependencyManagement>
