--- a/dcommons-service/dcommons-service-rom-api/pom.xml
+++ b/dcommons-service/dcommons-service-rom-api/pom.xml
@@ -45,6 +45,10 @@
             <version>${jakarta.inject.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>jakarta.transaction</groupId>
+            <artifactId>jakarta.transaction-api</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
