--- a/dcommons-service/pom.xml
+++ b/dcommons-service/pom.xml
@@ -16,6 +16,7 @@
     <modules>
         <module>dcommons-service-rom-jpa</module>
         <module>dcommons-service-rom-api</module>
+        <module>dcommons-service-commons</module>
     </modules>
 
     <properties>
