--- a/dcommons-service/dcommons-service-commons/pom.xml
+++ b/dcommons-service/dcommons-service-commons/pom.xml
@@ -17,6 +17,12 @@
             <artifactId>junit-jupiter-api</artifactId>
             <scope>test</scope>
         </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>commons-validator</groupId>-->
+<!--            <artifactId>commons-validator</artifactId>-->
+<!--            <version>1.8.0</version>-->
+<!--        </dependency>-->
     </dependencies>
 
 </project>
