--- a/dcommons-service/dcommons-service-rom-api/pom.xml
+++ b/dcommons-service/dcommons-service-rom-api/pom.xml
@@ -26,17 +26,7 @@
         <dependency>
             <groupId>jakarta.persistence</groupId>
             <artifactId>jakarta.persistence-api</artifactId>
-            <version>${jakarta.persistence-api}</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>jakarta.persistence</groupId>
-            <artifactId>jakarta.persistence-api</artifactId>
-            <version>3.1.0</version>
+            <version>${jakarta.persistence.api}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
