--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jakarta.inject.version>2.0.1</jakarta.inject.version>
         <jakarta.annotation>3.0.0-M1</jakarta.annotation>
-        <jakarta.persistence-api>3.2.0-M1</jakarta.persistence-api>
+        <jakarta.persistence.api>3.2.0-M1</jakarta.persistence.api>
     </properties>
 
     <dependencyManagement>
