--- a/dcommons-commons/pom.xml
+++ b/dcommons-commons/pom.xml
@@ -15,6 +15,8 @@
     <modules>
         <module>dcommons-commons-validation</module>
         <module>dcommons-commons-constant</module>
+        <module>dcommons-commons-util</module>
+        <module>dcommons-commons-util</module>
     </modules>
 
 </project>
