--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <jakarta.inject.version>2.0.1</jakarta.inject.version>
         <jakarta.annotation>3.0.0-M1</jakarta.annotation>
         <jakarta.persistence.api>3.2.0-M1</jakarta.persistence.api>
+        <apache.httpclient5.version>5.3</apache.httpclient5.version>
     </properties>
 
     <dependencyManagement>
