--- a/dcommons-commons/dcommons-commons-validation/pom.xml
+++ b/dcommons-commons/dcommons-commons-validation/pom.xml
@@ -12,12 +12,6 @@
     <groupId>com.dingwd.commons.validation</groupId>
     <artifactId>dcommons-commons-validation</artifactId>
     <dependencies>
-        <dependency>
-            <groupId>com.dingwd.commons.constant</groupId>
-            <artifactId>dcommons-commons-constant</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
 
         <dependency>
             <groupId>jakarta.validation</groupId>
@@ -42,6 +36,12 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.dingwd</groupId>
+            <artifactId>dcommons-commons-util</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
 
     </dependencies>
